Fix controller menu buttons being not visible in portrait mode

--- a/Controller/controller-app/src/Controller.css
+++ b/Controller/controller-app/src/Controller.css
@@ -1,11 +1,13 @@
 .controllerMenuContainer  {
-  width: 90%;
+  width: 100%;
+  height: 100%;
   outline: none;
   display: flex;
 }
 
 .controllerMenuItem {
-  flex-grow: 1
+  flex-grow: 1;
+  flex-basis: 100%;
 }
 
 .pixelButton {
